<resources>
    <string name="app_name">Nutrifami</string>
    <string name="get_started">Get started</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_passport">Documento</string>
    <string name="prompt_voucher_id">Codigo</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_passport">This passport id is invalid</string>
    <string name="error_invalid_voucher_id">This voucher id is invalid</string>
    <string name="error_login">We couldn\'t log you in. Double check your passport and voucher id.</string>
    <string name="error_field_required">This field is required</string>
    <string name="skip_underlined"><u>Skip</u></string>

    <!-- Modules activity -->
    <string name="modules_title">Modules</string>
    <string name="menu_profile_title">Profile</string>

    <!-- Module activity -->
    <string name="module_title">Module</string>
    <string name="lesson_card_title">Lesson title</string>
    <string name="lesson_card_description">Lesson description. Lesson description. Lesson description. Lesson description. Lesson description. Lesson description. Lesson description.</string>
    <string name="game_card_play_button">Play</string>
    <string name="lesson_card_start_button">Start</string>
    <string name="mode_transition_name">Module transition</string>

    <!-- Profile activity -->
    <string name="profile_title">Profile</string>
    <string name="text_quiz_question">Question Question Question Question Question Question</string>
    <string name="swipe_card_text_dummy">This is a question which will be presented on a swipeable card. Of what I have seen, it could be quite long but who knows at this point! =)</string>

    <!-- Explanation dialogue -->
    <string name="explanation_correct">CORRECT</string>
    <string name="explanation_false">NOT CORRECT</string>

    <!-- Game types -->
    <string name="game_pairs_title">Form pairs!</string>
    <string name="game_pairs_description">Select the corresponding pairs to win the game!</string>
    <string name="game_swipe_title">SWIPE!</string>
    <string name="game_swipe_description">Decide if the statement is true or false. If you think the statement is true then either click on “yes” or swipe the card to the right. If you think the statement is false then click on “no” or swipe the card to the left</string>
    <string name="game_quiz_title">Quizmaster!</string>
    <string name="game_quiz_description">Answer the following questions to see if you are the best quiz master in town!</string>
    <string name="game_picture_quiz_title">Picture quiz!</string>
    <string name="game_picture_quiz_description">Look closely and answer the question based on what you see!</string>
    <string name="start_nutrifami_logo_description">Nutrifami logo</string>
    <string name="module_icon_description">Module icon</string>
    <string name="qr_transition">QR Transition</string>
    <string name="explanation_positive_text">Ok</string>
    <string name="explanation_benefits_title">BENEFITS</string>
    <string name="explanation_benefits_nutrition_knowledge">GAIN NUTRITION KNOWLEDGE</string>
    <string name="explanation_benefits_play">HAVE FUN BY PLAYING DIFFERENT GAMES</string>
    <string name="explanation_benefits_happy">BECOME HAPPY AND HEALTHY</string>
    <string name="explanation_profile_title">PROFILE</string>
    <string name="explanation_profile_description">RECEIVE SHOPPING RECOMMENDATIONS BASED ON YOUR LAST PURCHASES</string>
    <string name="explanation_training_title">TRAINING</string>
    <string name="explanation_training_description">LEARN HOW TO EAT HEALTHY IN A FUN WAY</string>

</resources>
