<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lesson_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lesson_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lesson_card_title" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/lesson_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/lesson_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/circle_placeholder" />

        <TextView
            android:id="@+id/lesson_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lesson_image"
            android:text="@string/lesson_card_description" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/lesson_play_button"
            android:layout_below="@id/lesson_description"
            android:layout_height="wrap_content"
            android:text="@string/lesson_card_start_button" />

        <android.support.v7.widget.AppCompatImageView
            android:src="@mipmap/ic_check_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/lesson_card_completed" />
    </RelativeLayout>

</android.support.v7.widget.CardView>